# monitor

./: .gitmodules  CMakeLists.txt
Graph/: CMakeLists.txt
data_sim/: CMakeLists.txt
data_sim/src/: main.c
lib_sys/: CMakeLists.txt
lib_sys/include/: lib_sys.c  lib_sys.h
lib_sys/src/: cpu.c
lib_sys/src/procfs/: procfs.c  procfs.h
resources/: Path _ Slint Docs.html
src/: main.cpp
ui/: main.slint
